[tool.poetry]
name = "auth"
version = "0.1.0"
description = "Реализация микросервиса авторизации с помощью jwt токенов на FastAPI"
authors = ["Dmitry <lakizmeye14@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
